--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 body {
  background-color: peachpuff;
- display: flex;
- justify-content: center;
- align-items: center;
  padding: 40px;
+ max-width: 1600px;
+ height: auto;
+ margin: 0 auto;
 }
 
 .App{
  display: flex;
- flex-direction: column;
+ justify-content: center;
  align-items: center;
+ flex-direction: column;
 }
 
 .appWrapper{
@@ -17,7 +18,11 @@ body {
  justify-content: space-around;
  margin-top: 50px;
  gap: 30px;
+ flex-wrap: wrap;
 
+}
+.CreateTodolists{
+ margin-bottom: 40px;
 }
 
 
