--- a/src/Todolist.module.css
+++ b/src/Todolist.module.css
@@ -66,4 +66,15 @@ h3{
 }
 
 
+.appWrapper{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+    gap: 30px;
+    flex-wrap: wrap;
+
+}
+.CreateTodolists{
+    margin-bottom: 40px;
+}
 
