--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,6 +1,7 @@
 body {
  background-color: peachpuff;
  padding: 40px;
+ padding-top: 100px;
  max-width: 1600px;
  height: auto;
  margin: 0 auto;
@@ -11,6 +12,29 @@ body {
  justify-content: center;
  align-items: center;
  flex-direction: column;
+}
+.header{
+ width: 100%;
+ height: 70px;
+ top:0;
+ position: absolute;
+ background-color:darkgreen;
+ display: flex;
+ align-items: center;
+ justify-content: end;
+
+
+
+}
+.btnHeader{
+ font-size: 18px;
+ background:transparent;
+ color: white;
+ padding: 5px;
+ margin-right: 40px;
+
+
+
 }
 
 .appWrapper{
